# sanic_framework

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  logging.conf  pyproject.toml  pytest.ini  requirements.txt  run.py  sanic.conf
.github/workflows/: ci.yml  p1-04-format-diagnostic.yml  p1-04-ruff-diagnostic.yml  p1-05-ruff-diagnostic.yml  p1-07-format-repair.yml  p1-07-mypy-diagnostic.yml  ruff-diagnostic.yml
app/: __init__.py  bootstrap.py  common.py  helper.py  route.py
app/controller/: health.py  meta.py
app/language/: modules.ini
config/: config.ini  defaults.py  settings.py
docs/: architecture.md
docs/adr/: ADR-concurrency-cancellation-backpressure.md  ADR-core-vs-extension-boundary.md  ADR-database-backend-registry-and-routing.md  ADR-events-audit-observability-testing.md  ADR-extension-container-lifecycle.md  ADR-idempotency-replay-rate-limit-boundary.md  ADR-openapi-codegen-contract-drift.md  ADR-schema-contract-layering.md  ADR-security-request-execution-chain.md  ADR-timeout-circuit-breaker-graceful-shutdown.md
docs/architecture/: APPLICATION_KERNEL_AND_REQUEST_PIPELINE.md  EXECUTABLE_AND_BUILD_BASELINE.md  HARDENING_FOUNDATIONS.md  LINGSHU_FRAMEWORK_BLUEPRINT.md  P0_DECISION_STATUS.md  P0_FINAL_FREEZE.md  P0_HARDENING_CHECKLIST.md  PACKAGE_AND_COMPONENT_LAYOUT.md  README.md  RUNTIME_CONCURRENCY_MODEL.md  architecture-contract.json  dependency-rules.md  ownership-boundaries.md  phase-cf-implementation-map.md  public-api-contract.md  src-convergence-audit.md  src-migration-roadmap.md  src-target-boundaries.md
docs/codex/: CURRENT_PHASE.md  HANDOFF.md
docs/decisions/: ADR-000-greenfield-reset.md  ADR-001-framework-project-ownership.md  ADR-001-single-repository-and-concurrent-development.md  ADR-002-public-api-and-deprecation.md  ADR-002-runtime-concurrency-model.md  ADR-003-layer-dependency-direction.md  ADR-003-package-source-layout-and-component-boundaries.md  ADR-004-application-kernel-request-pipeline-and-public-api.md  ADR-004-tenant-optional-capability.md  ADR-005-development-authority-and-merge-control.md  ADR-005-hardening-foundations.md  ADR-006-executable-cli-support-and-build-baseline.md  ADR-006-simplified-package-root-and-official-extensions.md  ADR-007-public-governance-release-and-p0-freeze.md
docs/development/: CONCURRENT_DEVELOPMENT.md  CURRENT_PHASE.md  DEVELOPMENT_CONSTITUTION.md  HANDOFF.md  P0_CHANGELOG.md  P1_IMPLEMENTATION_PLAN.md  P1_IMPLEMENTATION_READINESS.md  REVIEW_CHECKLIST.md  TASK_TEMPLATE.md
docs/governance/: RELEASE_AND_COMPATIBILITY_POLICY.md
docs/research/: extensions-di-events-observability-testing-comparison.md  framework-capability-matrix.md  lingshu-adoption-matrix.md  mongodb-odm-schema-comparison.md  mysql-orm-transaction-comparison.md  redis-resilience-cache-lock-comparison.md  request-lifecycle-concurrency-resilience-comparison.md  schema-validation-serialization-openapi-comparison.md  security-authz-signing-idempotency-comparison.md  sql-access-second-batch-comparison.md
docs/roadmap/: RELEASE_ROADMAP.md
framework/: __init__.py  app.py  config.py  controller.py  error_codes.py  exception.py  helper.py  i18n.py  lifecycle.py  logging.py  middleware_registry.py  response.py  router.py
framework/cli/: main.py  project.py
framework/database/: __init__.py  mongo.py  mysql.py  redis.py
framework/extensions/: auth.py  cache.py  i18n.py  maintenance.py  mongo.py  mysql.py  redis.py  registry.py  signing.py
framework/middleware/: api_exception.py  auth.py  cache.py  crypt_des.py  crypt_params.py  json.py  maintenance.py  params.py  sign.py  utils.py
framework/model/: __init__.py  base.py  business.py  model.py
language/: __init__.py
lingshu/: __init__.py  __main__.py  _version.py
scripts/: resume-work.ps1  setup-dev.ps1  verify-handoff.ps1
tests/: conftest.py  test_app_factory.py  test_c1_execution_context.py  test_c1_lifecycle.py  test_c1_review_regressions.py  test_c1_route_policy.py  test_c1_task_registry.py  test_c1_third_round_review.py  test_c2_auth.py  test_c2_tenant.py  test_cli.py  test_cli_version.py  test_config.py  test_context_facade.py  test_cors.py  test_database_dependencies.py  test_demo_routes.py  test_error_codes.py  test_extensions.py  test_framework_boundary.py  test_handoff_workflow.py  test_health.py  test_import_safety.py  test_init_project.py  test_logging.py  test_model_base.py  test_model_demo.py  test_mysql_database.py  test_package_baseline.py  test_packaging.py  test_public_docs.py  test_repository_hygiene.py  test_response_contract.py  test_route_policy.py  test_security_extensions.py
(+168 files in other folders)
