[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanic-framework"
version = "0.1.0"
description = "Versioned MVC Sanic framework template"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "sanic>=25.3,<26",
  "python-dotenv>=1.0,<2",
  "Jinja2>=3.1,<4",
  "aiomysql>=0.2,<1",
  "motor>=3.6,<4",
  "redis>=5,<7",
  "sanic-babel>=1.0",
  "PyJWT>=2.8,<3",
  "filelock>=3.12,<4",
  "pycryptodome>=3.20,<4",
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Sanic",
]

[project.scripts]
sanic-framework = "framework.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "sanic-testing>=23.6",
  "httpx>=0.27",
]

[tool.setuptools]
packages = [
  "framework",
  "framework.cli",
  "framework.database",
  "framework.extensions",
  "framework.middleware",
  "framework.model",
  "framework.view",
]
py-modules = []

[tool.setuptools.package-data]
framework = ["modules.ini", "scaffold/*.j2"]
