[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingshu-framework"
version = "0.2.0"
description = "LingShu Framework - an application framework built on Sanic"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "sanic>=25.3,<26",
  "python-dotenv>=1.0,<2",
  "Jinja2>=3.1,<4",
  "aiomysql>=0.2,<1",
  "motor>=3.6,<4",
  "redis>=5,<7",
  "sanic-babel>=0.3,<1",
  "PyJWT>=2.8,<3",
  "filelock>=3.12,<4",
  "pycryptodome>=3.20,<4",
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Sanic",
]

[project.scripts]
lingshu = "lingshu.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "sanic-testing>=23.6",
  "httpx>=0.27",
  "build>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lingshu*"]

[tool.setuptools.package-data]
lingshu = [
  "resources/error_codes/*.ini",
  "system/error_codes/*.json",
  "language/**/*.ini",
  "scaffold/*.j2",
]
