[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "lingshu"
version = "0.1.0.dev0"
description = "An independently implemented Python Web/API framework."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "LingShu Framework contributors" }]
keywords = ["api", "asyncio", "framework", "http", "web"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/qianhuaqi/lingshu/tree/main/docs"
Issues = "https://github.com/qianhuaqi/lingshu/issues"
Repository = "https://github.com/qianhuaqi/lingshu"

[project.scripts]
lingshu = "lingshu.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["lingshu"]

[tool.hatch.build.targets.sdist]
include = [
  "/lingshu",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/NOTICE",
  "/DCO",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/CODE_OF_CONDUCT.md",
  "/CHANGELOG.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["lingshu", "tests"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/runtime/test_deadline.py" = ["I001"]
"tests/runtime/test_scope.py" = ["I001"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["lingshu"]
warn_unreachable = true
